# icarus_lib

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.hpp
examples/create_songs/: create_songs.cpp
examples/create_tokens/: create_tokens.cpp
examples/create_users/: create_users.cpp
examples/delete_users/: delete_users.cpp
examples/fetch_albums/: fetch_albums.cpp
examples/fetch_artists/: main.cpp
examples/fetch_songs/: fetch_songs.cpp
examples/fetch_users/: fetch_users.cpp
examples/update_users/: update_users.cpp
icarus_lib/: CMakeLists.txt
icarus_lib/examples/: example.hpp
icarus_lib/examples/create_users/: create_users.cpp
icarus_lib/examples/fetch_albums/: fetch_albums.cpp
icarus_lib/examples/fetch_songs/: fetch_songs.cpp
icarus_lib/include/: icarus.h
icarus_lib/include/icarus_lib/models/: models.hpp
icarus_lib/include/models/: auth_models.hpp  config_models.hpp  models.hpp  music_models.hpp
icarus_lib/include/repositories/: base_repository.hpp
icarus_lib/include/repositories/database/cloud/: song_repository.hpp
icarus_lib/include/types/: music.hpp
icarus_lib/src/: icarus.cpp
include/icarus_lib/: icarus.h  icarus.hpp
include/icarus_lib/manager/: album_manager.hpp  base_manager.hpp  directory_manager.hpp  managers.hpp  token_manager.hpp
include/icarus_lib/models/: auth_models.hpp  config_models.hpp  models.hpp
include/icarus_lib/repositories/: base_repository.hpp
include/icarus_lib/repositories/database/cloud/: album_repository.hpp  artist_repository.hpp  base_repository.h  base_repository.hpp  cover_art_repository.hpp  genre_repository.hpp  repositories.hpp  repository_utility.h  repository_utility.hpp  song_repository.hpp  token_repository.hpp  user_repository.hpp
include/icarus_lib/types/: auth.hpp  music.hpp  path_type.hpp  types.hpp
include/icarus_lib/utility/: general.hpp  image_file.hpp  metadata_retriever.hpp  password_encryption.hpp
src/: icarus.cpp
src/icarus_lib/: icarus.cpp
src/icarus_lib/manager/: album_manager.cpp  managers.cpp
src/icarus_lib/repositories/database/cloud/: album_repository.cpp  artist_repository.cpp  base_repository.cpp  cover_art_repository.cpp  cover_art_repository.hpp  genre_repository.cpp  song_repository.cpp  token_repository.cpp  user_repository.cpp
src/icarus_lib/utility/: general.cpp  image_file.cpp  metadata_retriever.cpp  password_encryption.cpp
